Added the welcome page.
SQL file updated, tech grid updated.
Details views updated.
Changed a few lines of codes.
Added author for each function and page.

--- a/carrentalsystem/crcapp/templates/staff/loginstaffview.html
+++ b/carrentalsystem/crcapp/templates/staff/loginstaffview.html
@@ -213,7 +213,7 @@
                             <hr>
                             <br>
                             
-                                {% if employee.userType != "disabled" %}
+                                {% if employee.disable != 1 %}
                                 <div class="row">
                                     <div class="col-md-3 field-label-responsive">
                                         <label for="userType">Username</label>
