--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -37,24 +37,17 @@
       <br>
    </div>
    <div class="col-md-3 col-sm-6 text-center">
-      <a href="">
+      <a href="vehicle/create">
          <i class="fas fa-plus" style="font-size:36px;"></i>
          <br>
          <p>Insert Vehicle</p>
       </a>
    </div>
    <div class="col-md-3 col-sm-6 text-center">
-      <a href="">
+      <a href="vehicle">
          <i class="far fa-eye" style="font-size:36px;"></i>
          <br>
          <p>View Vehicles</p>
-      </a>
-   </div>
-   <div class="col-md-3 col-sm-6 text-center">
-      <a href="">
-         <i class="fas fa-edit" style="font-size:36px;"></i>
-         <br>
-         <p>Modify Vehicle</p>
       </a>
    </div>
    <div class="col-md-3 col-sm-6 text-center">
