--- a/carrentalsystem/crcapp/templates/public/index.html
+++ b/carrentalsystem/crcapp/templates/public/index.html
@@ -8,55 +8,177 @@
     <meta name="author" content="Se7en">
 
     <title>Welcome | Car Rental System</title>
-
     <!-- Bootstrap and other plugins -->
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-  
+    <link rel="stylesheet" href="{% static "css/bootstrap-datepicker3.standalone.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap-timepicker.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/daterangepicker.css" %}">
+    <link rel="stylesheet" href="{% static "css/jquery.dataTables.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/dataTables.bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/responsive.bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/select2.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/select2-bootstrap.css" %}">
+   
     <!-- Fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    
-    <!-- CRC Styles -->
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/publicstyles.css" %}">
+
   </head>
 
-  <body>
-    <div class="container pt-5">
-      <div class="row justify-content-center">
-        
-        <div class="col-md-4 col-sm-12 pt-2 text-center">
-        
-            <h1><b>Car Rental System</b></h1>
-            <br>
-            {% if msg != "" %}
-              {% if mtype == "d" %}
-                <div class="alert alert-danger">
-              {% elif mtype == "i" %}
-                <div class="alert alert-info">
-              {% endif %}
-                    {{ msg }}
-                  </div>
-            {% endif %}
-            <h1 class="h3 mb-3 font-weight-normal">PUBLIC WEB - UNDER CONSTRUCTION</h1>
-                  <a href="/login">Login</a>
-        </div>
+  <body id="page-top">
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-block d-lg-none">CRC Web</span>
+        <span class="d-none d-lg-block">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static "images/icon.jpg" %}" alt="">
+        </span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#vehicles">Vehicles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#stores">Stores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/login">Login</a>
+          </li>
+         
+        </ul>
       </div>
-      <footer>
-        <div class="row justify-content-center text-center">
-          <div class="col-md-4 col-sm-12">
-              <p class="mt-5 mb-3 text-muted">&copy; 2018 | Se7en | Team #23</p>
+    </nav>
+
+    <div class="container-fluid p-0">
+
+      <section class="content-section p-3 p-lg-5" id="home">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <br>
+            <h3>Welcome to Car Rental Service</h3>
+            <br>
+            <hr>
+            <br>
           </div>
         </div>
-      </footer>
+        <div class="row mt-5 mb-5">
+
+          
+          <div class="col-md-6">
+            
+              <div class="form-group">
+                <select class="form-control" id="exampleSelect1">
+                  <option> SELECT PICKUP STORE  </option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+          
+            </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <select class="form-control" id="exampleSelect1">
+                  <option> SELECT RETURN STORE  </option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+            </div>
+
+          </div>
+
+
+          <div class="row mt-5 mb-5">
+
+          
+              <div class="col-md-6">
+                
+                  <div class="form-group">
+                      <input data-date-format="yyyy-mm-dd" name="pickupdate" class="form-control"
+                      id="datepicker" placeholder="Pickup Date: yyyy-mm-dd" required >
+              
+                </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                      <input data-date-format="yyyy-mm-dd" name="returndate" class="form-control"
+                      id="datepicker" placeholder="Return Date: yyyy-mm-dd" required >
+                  </div>
+                </div>
+    
+                
+              </div>
+              <div class="row justify-content-center mt-5">
+                  <div class="col-md-3">
+                      <div class="form-group pl-5">
+                          <div class="btn btn-flat btn-primary pl-5 pr-5" id="selectBtn">SELECT</div>
+                        </div>
+                  </div>
+              </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="content-section p-3 p-lg-5 d-flex flex-column" id="vehicles">
+        <h2 class="mb-5">Vehicles</h2>
+
+
+      </section>
+
+      <hr class="m-0">
+
+      <section class="content-section p-3 p-lg-5 d-flex flex-column" id="stores">
+          <h2 class="mb-5">Stores</h2>
+        <div class="row">
+          <h4>Google Map store locator, coming soon...</h4>
+        </div>
+      </section>
+
 
     </div>
-    
-  </body>
-
-<!-- Scripts -->
-  <script src="{% static "js/jquery-3.3.1.min.js" %}" ></script>
+    <script src="{% static "js/jquery-3.3.1.min.js" %}" ></script>
   <script src="{% static "js/popper.min.js" %}" ></script>
   <script src="{% static "js/bootstrap.min.js" %}" ></script>
-  <script src="{% static "js/main.js" %}" ></script>
+  <script src="{% static "js/bootstrap-datepicker.min.js" %}" ></script>
+  <script src="{% static "js/bootstrap-timepicker.min.js" %}" ></script>
+  <script src="{% static "js/daterangepicker.js" %}" ></script>
+  <script src="{% static "js/jquery.dataTables.min.js" %}" ></script>
+  <script src="{% static "js/dataTables.bootstrap.min.js" %}" ></script>
+  <script src="{% static "js/dataTables.responsive.min.js" %}" ></script>
+  <script src="{% static "js/responsive.bootstrap.min.js" %}" ></script>
+  <script src="{% static "js/select2.min.js" %}" ></script>  
+  <script src="https://cdn.datatables.net/select/1.2.6/js/dataTables.select.min.js" ></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js" ></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js" ></script>
+  <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js" ></script>
+  <script src="{% static "js/html2canvas.min.js" %}" ></script>
+  <script src="{% static "js/jspdf.debug.js" %}" ></script>
+  <script src="{% static "js/jquery.easing.min.js" %}" ></script>
+  <script src="{% static "js/publicmain.js" %}" ></script>
+      
+    <script>
+      $('#datepicker').datepicker({
+            weekStart: 1,
+            daysOfWeekHighlighted: "6,0",
+            autoclose: true,
+            todayHighlight: true,
+         });
+         </script>
+  </body>
+
 </html>
