--- a/carrentalsystem/crcapp/templates/vehicle/View Vehicles.html
+++ b/carrentalsystem/crcapp/templates/vehicle/View Vehicles.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Se7en">
 
-    <title>{% block title %}{% endblock %} | Car Rental System</title>
+    <title>{% block title %}View Vehicles{% endblock %} | Car Rental System</title>
 
     <!-- Bootstrap and other plugins -->
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
