View customers still not working

--- a/carrentalsystem/crcapp/templates/customer/modify.html
+++ b/carrentalsystem/crcapp/templates/customer/modify.html
@@ -139,7 +139,7 @@
 				{% comment %} <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#exampleModalCenter">
 						Launch demo modal
 				</button> {% endcomment %}
-				{% comment %} <button type="submit" class ="btn btn-danger btn-block" value="Delete"><i class="far fa-times-circle"></i> Delete</button> {% endcomment %}
+				<button type="submit" class ="btn btn-danger btn-block" value="Delete"><i class="far fa-times-circle"></i> Delete</button>
 			</div>
 		{% else %}
 			<button type="submit" class="btn btn-success btn-block"><i class="fa fa-user-plus"></i> Register</button>
