--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -73,7 +73,7 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                <a href="customer/search">
+                <a href="{% url 'viewCustomers' %}">
                    <i class="far fa-eye" style="font-size:36px;"></i>
                    <br>
                    <p>View Customers</p>
@@ -87,7 +87,7 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                    <a href="customer">
+                    <a href="">
                        <i class="fas fa-search" style="font-size:36px;"></i>
                        <br>
                        <p>Search Customer</p>
