--- a/carrentalsystem/crcapp/templates/staff/search.html
+++ b/carrentalsystem/crcapp/templates/staff/search.html
@@ -23,7 +23,12 @@
                         <select class="form-control select2 p-2" style="width:280px;" name="staffID" id="staffID" required>
                             <option value="">Select category</option>
                             {% for field in fields %}
+                            {% if field.name == "order" %}
+                            {% elif field.name == "inspects" %}
+                            {% elif field.name == "disable" %}
+                            {% else %}
                             <option value="{{ field }}">{{ field.name }}</option>
+                            {% endif %}
                             {% endfor %}
                         </select>
                     </div>
@@ -112,7 +117,79 @@
 
 {% block scripts %}
 <script>
-// datatable initialising
+        //  $(document).ready(function() {
+        //     $("#dtView").hide();
+        //     $('#field').select2();
+        // });
+        
+        // $("#btnStaff").click(function(){
+        //     $.ajax({
+        //         url: "/staff/store",
+        //         type : 'POST', 
+        //         data: {field:$('#field').val()},
+        //         contentType: 'application/x-www-form-urlencoded',
+        //         success: function(result){
+        //             // converting the result string to JSON array
+        //             var result = JSON.parse(result);
+        //             var rows = ''; //initialising a string variable
+                    
+        //             // Adding values to the string by iterating the array
+        //             for(var i=0; i < result.length; i++ ){
+        //                 rows += '<tr>'+
+        //                         '<td><a href="/staff/login/'+result[i]['pk']+'">'+result[i]['pk']+'</a></td>'+
+        //                         '<td>'+result[i]['fields']['firstName']+' '+result[i]['fields']['lastName']+'</td>'+
+        //                         '<td>'+result[i]['fields']['email']+'</td>'+
+        //                         '<td>'+result[i]['fields']['userName']+'</td>'+
+        //                         '<td>'+result[i]['fields']['userType']+'</td>'+
+        //                         '<td>'+result[i]['fields']['dateJoined']+'</td>'+  
+        //                         '</tr>';
+        //             }
+        //             // adding the rows string to #records component to populate as HTML
+        //             $("#records").html(rows);
+        //             // showing the table
+        //             $("#dtView").show();
+        //             // datatable initialising
+        //                 $('#tbl').DataTable({
+        //                     'retrieve': true,
+        //                     'paging'      : true, // for pagination
+        //                     'lengthChange': false,
+        //                     'searching'   : true, //searching
+        //                     'ordering'    : true, //sorting
+        //                     'info'        : true,
+        //                     'autoWidth'   : true, // keep this true
+        //                     'sScrollX': '100%', // this too
+        //                     "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items 
+      
+        //                       'dom': 'Bfrtip', //export buttons
+        //                       'buttons': [
+        //                         {
+        //                           extend: 'copyHtml5',
+        //                           text: 'Copy',
+        //                           className: 'btn btn-flat btn-primary',
+        //                         },
+        //                         {
+        //                           extend: 'excelHtml5',
+        //                           text: 'Export to Excel',
+        //                           className: 'btn btn-flat btn-primary',
+        //                         },
+        //                         {
+        //                           extend: 'print',
+        //                           className: 'btn btn-flat btn-primary',
+        //                           customize: function ( win ) {
+        //                             $(win.document.body).css('background', '#fff');
+        //                             $(win.document.body).css('padding', '20px');
+        //                           }
+      
+        //                         }
+      
+        //                       ]
+        //                   })
+                    
+        //         }});
+            
+            
+        // })
+//datatable initialising
   $('#tbl').DataTable({
       'retrieve': true,
       'paging'      : true, // for pagination
@@ -148,14 +225,6 @@
 
         ]
     })
-        
-
-// $(document).ready(function() {
-//   $("#dtView").hide();
-//   $('#storeID').select2();
-// });
-
-// $("#btnStaff").click(function(){})
 
 </script>
 
