--- a/carrentalsystem/crcapp/templates/staff/search.html
+++ b/carrentalsystem/crcapp/templates/staff/search.html
@@ -67,7 +67,7 @@
               </tr>
               </thead>
               <tbody id="records">
-                {% for employee in employees %}
+                <!-- {% for employee in employees %}
                 <tr>
                   <td class="pdttable">{{ employee.employeeID }}</td>
                   <td class="pdttable">{{ employee.firstName }}</td>
@@ -85,7 +85,7 @@
                   <td class="pdttable">{{ employee.dateJoined }}</td> 
                   <td class="pdttable">{{ employee.lastLogin }}</td> 
                   <td class="pdttable">{{ employee.storeID }}</td> 
-                </tr>
+                </tr> -->
                 {% endfor %}
               </tbody>
               <tfoot>
@@ -117,114 +117,114 @@
 
 {% block scripts %}
 <script>
-        //  $(document).ready(function() {
-        //     $("#dtView").hide();
-        //     $('#field').select2();
-        // });
+         $(document).ready(function() {
+            $("#dtView").hide();
+            $('#field').select2();
+        });
         
-        // $("#btnStaff").click(function(){
-        //     $.ajax({
-        //         url: "/staff/store",
-        //         type : 'POST', 
-        //         data: {field:$('#field').val()},
-        //         contentType: 'application/x-www-form-urlencoded',
-        //         success: function(result){
-        //             // converting the result string to JSON array
-        //             var result = JSON.parse(result);
-        //             var rows = ''; //initialising a string variable
+        $("#btnStaff").click(function(){
+            $.ajax({
+                url: "/staff/store",
+                type : 'POST', 
+                data: {field:$('#field').val()},
+                contentType: 'application/x-www-form-urlencoded',
+                success: function(result){
+                    // converting the result string to JSON array
+                    var result = JSON.parse(result);
+                    var rows = ''; //initialising a string variable
                     
-        //             // Adding values to the string by iterating the array
-        //             for(var i=0; i < result.length; i++ ){
-        //                 rows += '<tr>'+
-        //                         '<td><a href="/staff/login/'+result[i]['pk']+'">'+result[i]['pk']+'</a></td>'+
-        //                         '<td>'+result[i]['fields']['firstName']+' '+result[i]['fields']['lastName']+'</td>'+
-        //                         '<td>'+result[i]['fields']['email']+'</td>'+
-        //                         '<td>'+result[i]['fields']['userName']+'</td>'+
-        //                         '<td>'+result[i]['fields']['userType']+'</td>'+
-        //                         '<td>'+result[i]['fields']['dateJoined']+'</td>'+  
-        //                         '</tr>';
-        //             }
-        //             // adding the rows string to #records component to populate as HTML
-        //             $("#records").html(rows);
-        //             // showing the table
-        //             $("#dtView").show();
-        //             // datatable initialising
-        //                 $('#tbl').DataTable({
-        //                     'retrieve': true,
-        //                     'paging'      : true, // for pagination
-        //                     'lengthChange': false,
-        //                     'searching'   : true, //searching
-        //                     'ordering'    : true, //sorting
-        //                     'info'        : true,
-        //                     'autoWidth'   : true, // keep this true
-        //                     'sScrollX': '100%', // this too
-        //                     "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items 
+                    // Adding values to the string by iterating the array
+                    for(var i=0; i < result.length; i++ ){
+                        rows += '<tr>'+
+                                '<td>'+result[i]['pk']+'</a></td>'+
+                                '<td>'+result[i]['fields']['firstName']+' '+result[i]['fields']['lastName']+'</td>'+
+                                '<td>'+result[i]['fields']['email']+'</td>'+
+                                '<td>'+result[i]['fields']['userName']+'</td>'+
+                                '<td>'+result[i]['fields']['userType']+'</td>'+
+                                '<td>'+result[i]['fields']['dateJoined']+'</td>'+  
+                                '</tr>';
+                    }
+                    // adding the rows string to #records component to populate as HTML
+                    $("#records").html(rows);
+                    // showing the table
+                    $("#dtView").show();
+                    // datatable initialising
+                        $('#tbl').DataTable({
+                            'retrieve': true,
+                            'paging'      : true, // for pagination
+                            'lengthChange': false,
+                            'searching'   : true, //searching
+                            'ordering'    : true, //sorting
+                            'info'        : true,
+                            'autoWidth'   : true, // keep this true
+                            'sScrollX': '100%', // this too
+                            "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items 
       
-        //                       'dom': 'Bfrtip', //export buttons
-        //                       'buttons': [
-        //                         {
-        //                           extend: 'copyHtml5',
-        //                           text: 'Copy',
-        //                           className: 'btn btn-flat btn-primary',
-        //                         },
-        //                         {
-        //                           extend: 'excelHtml5',
-        //                           text: 'Export to Excel',
-        //                           className: 'btn btn-flat btn-primary',
-        //                         },
-        //                         {
-        //                           extend: 'print',
-        //                           className: 'btn btn-flat btn-primary',
-        //                           customize: function ( win ) {
-        //                             $(win.document.body).css('background', '#fff');
-        //                             $(win.document.body).css('padding', '20px');
-        //                           }
+                              'dom': 'Bfrtip', //export buttons
+                              'buttons': [
+                                {
+                                  extend: 'copyHtml5',
+                                  text: 'Copy',
+                                  className: 'btn btn-flat btn-primary',
+                                },
+                                {
+                                  extend: 'excelHtml5',
+                                  text: 'Export to Excel',
+                                  className: 'btn btn-flat btn-primary',
+                                },
+                                {
+                                  extend: 'print',
+                                  className: 'btn btn-flat btn-primary',
+                                  customize: function ( win ) {
+                                    $(win.document.body).css('background', '#fff');
+                                    $(win.document.body).css('padding', '20px');
+                                  }
       
-        //                         }
+                                }
       
-        //                       ]
-        //                   })
+                              ]
+                          })
                     
-        //         }});
+                }});
             
             
-        // })
+        })
 //datatable initialising
-  $('#tbl').DataTable({
-      'retrieve': true,
-      'paging'      : true, // for pagination
-      'lengthChange': false,
-      'searching'   : true, //searching
-      'ordering'    : true, //sorting
-      'info'        : true,
-      'autoWidth'   : true, // keep this true
-      'sScrollX': '100%', // this too
-      "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items
+  // $('#tbl').DataTable({
+  //     'retrieve': true,
+  //     'paging'      : true, // for pagination
+  //     'lengthChange': false,
+  //     'searching'   : true, //searching
+  //     'ordering'    : true, //sorting
+  //     'info'        : true,
+  //     'autoWidth'   : true, // keep this true
+  //     'sScrollX': '100%', // this too
+  //     "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items
 
-        'dom': 'Bfrtip', //export buttons
-        'buttons': [
-          {
-            extend: 'copyHtml5',
-            text: 'Copy',
-            className: 'btn btn-flat btn-primary',
-          },
-          {
-            extend: 'excelHtml5',
-            text: 'Export to Excel',
-            className: 'btn btn-flat btn-primary',
-          },
-          {
-            extend: 'print',
-            className: 'btn btn-flat btn-primary',
-            customize: function ( win ) {
-              $(win.document.body).css('background', '#fff');
-              $(win.document.body).css('padding', '20px');
-            }
+  //       'dom': 'Bfrtip', //export buttons
+  //       'buttons': [
+  //         {
+  //           extend: 'copyHtml5',
+  //           text: 'Copy',
+  //           className: 'btn btn-flat btn-primary',
+  //         },
+  //         {
+  //           extend: 'excelHtml5',
+  //           text: 'Export to Excel',
+  //           className: 'btn btn-flat btn-primary',
+  //         },
+  //         {
+  //           extend: 'print',
+  //           className: 'btn btn-flat btn-primary',
+  //           customize: function ( win ) {
+  //             $(win.document.body).css('background', '#fff');
+  //             $(win.document.body).css('padding', '20px');
+  //           }
 
-          }
+  //         }
 
-        ]
-    })
+  //       ]
+  //   })
 
 </script>
 
