--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -28,58 +28,162 @@
   </head>
 
   <body>
-    <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                      <a class="navbar-brand" href="#">CRC System</a>
-                      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                       
-                        <li class="nav-item font-blue pt-2 ml-2" style="text-transform: capitalize;">
-                          Welcome, {{ name }}
-                        </li>
-                        
-                      </ul>
-                      <div class="form-inline my-2 my-lg-0">
-                            <a href="/logoff"><i class="fas fa-power-off"></i> Logoff</a>
-                      </div>
+      <nav class="navbar navbar-dark sticky-top bg-light flex-md-nowrap pt-2 pb-2 z-depth-2">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">CRC System</a>
+        <input class="form-control form-control-dark w-100" type="text" placeholder="Search...." aria-label="Search">
+        <ul class="navbar-nav px-3">
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          
+        </ul>
+      </nav>
+  
+      <div class="container-fluid">
+        <div class="row">
+          <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+            <div class="sidebar-sticky">
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link active" href="/home">
+                    <span><i class="fa fa-home"></i></span>
+                    Home</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">
+                      <span><i class="fa fa-user"></i></span>
+                      Profile</span>
+                    </a>
+                  </li>
+                  <p class="pl-2 font-black border-up" >
+                     <small>Bookings</small>                    
+                  </p>
+                  
+                <li class="nav-item">
+                  <a class="nav-link" href="/booking/order">
+                    <span><i class="fas fa-shopping-cart"></i></span>
+                    Book Vehicles
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <span><i class="fas fa-file-invoice"></i></span>
+                      Invoices
+                    </a>
+                  </li>
+                  {% if request.session.utype != "Customer" %}
+                <li class="nav-item">
+                  <a class="nav-link" href="#">
+                    <span><i class="fas fa-search-plus"></i></span>
+                    Inspections
+                  </a>
+                </li>
+                <p class="pl-2 font-black border-up" >
+                    <small>Vehicle Management</small>                    
+                 </p>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="/vehicle/create">
+                    <span><i class="fas fa-plus"></i></span>
+                    Insert Vehicle
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/vehicle">
+                      <span><i class="fas fa-eye"></i></span>
+                      View Vehicles
+                    </a>
+                  </li>
+
+                <p class="pl-2 font-black border-up" >
+                    <small>Customer Management</small>                    
+                 </p>
+
+                 
+                 
+                 <li class="nav-item">
+                    <a class="nav-link" href="/customer/create">
+                      <span><i class="fas fa-plus"></i></span>
+                      Insert Customer
+                    </a>
+                  </li>
+  
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fas fa-eye"></i></span>
+                        View Customers
+                      </a>
+                    </li>
+                {% endif %}
+                {% if request.session.utype == "Manager" or  request.session.utype == "Developer" %}
+
+                <p class="pl-2 font-black border-up" >
+                    <small>Staff Management</small>                    
+                 </p>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/staff/create">
+                      <span><i class="fas fa-plus"></i></span>
+                      Insert Staff
+                    </a>
+                  </li>
+  
+                  <li class="nav-item">
+                      <a class="nav-link" href="/staff">
+                        <span><i class="fas fa-eye"></i></span>
+                        View Staff
+                      </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/staff/login">
+                          <span><i class="fas fa-sign-in-alt"></i></span>
+                          Login Management
+                        </a>
+                      </li>
+
+                      <p class="pl-2 font-black border-up" >
+                          <small>Reports</small>                    
+                       </p>
+                      
+                      {% endif %}
+              </ul>
+  
+              
+              </ul>
+            </div>
+          </nav>
+  
+          <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+              <div class="row pb-2 mb-3 border-bottom">
+                  <div class="col-md-12">
+                  <nav aria-label="breadcrumb">
+                      <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/home">Home</a></li>
+                        {% block breadcrumb %}
+                        {% endblock %}
+                      </ol>
+                    </nav>
                     </div>
-                  </nav>
-       
-      </header>
+              </div>
+            <div class="row align-items-center pb-2 mb-3 border-bottom">
+              
+                <div class="col-md-12">
+                          {% block content %}
+                          {% endblock %}
+                 
+                </div>
+              
+            </div>
+  
+          </main>
+        </div>
+      </div>
   
       
-        <main role="main" class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="/home">Home</a></li>
-                  {% block breadcrumb %}
-                  {% endblock %}
-                </ol>
-              </nav>
-            
-            {% block content %}
-            {% endblock %}
-            
-    
-    
-        </main>
-
-
-
-  
-      <footer class="footer">
-        <div class="container">
-          <div class="row justify-content-center text-center">
-            <div class="col-4">
-                <p class="mt-5 mb-3 text-muted">&copy; 2018 | Se7en | Team #23</p>
-            </div>
-            </div>
-        </div>
-      </footer>
-  </body>
+    </body>
 
 <!-- Scripts -->
   <script src="{% static "js/jquery-3.3.1.min.js" %}" ></script>
